Closed Bug 1728952 Opened 4 years ago Closed 4 years ago

[Wayland] Permission popups can't be opened after while

Categories

(Core :: Widget: Gtk, defect, P2)

defect

Tracking

()

VERIFIED FIXED
96 Branch
Tracking Status
firefox96 --- verified
firefox97 --- verified

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Go to https://mozilla.github.io/webrtc-landing/gum_test.html
Try to repeatedly open/close site permissions popups. After while popups can't be opened.

Also URL bar indicates that the popups are opened but they are not visible.

I also see this happens when:

  • Get a permissions popup.
  • Give focus to another application.
  • The popup can no longer shows up.

Switching to another tab and back fixes it.

I think it's the same issue, right?

Yes, looks like a similar one.

For me this happens 100% after Firefox first propose to save some password. This is often a case with Zoom meetings: I enter password to access it, get save panel, get this bug when 'Join with computer audio' after.

Does it hell if you try latest nightly, go to about:config, add widget.use-move-to-rect bool key and set it to false and restart browser?

I tried your suggestion with latest nightly and sadly it didn't help here. I can confirm the description by ettavolt triggers it every time (save password prompt + permissions pop up = permissions pop up disappears). This is on sway version 1.6.1.

Which compositor do you use? I'm unable to reproduce with mutter-40.5 / Fedora 34.

This is with sway 1.6.1 and wlroots 0.14.1 on NixOS 21.05.

I've added simple form to trigger 'Remember password' popup. This is enough for 96.0a1 (2021-11-08) (64-bit) to break when talking to mutter 40.5-1 irrespectively of widget.use-move-to-rect: false added.

The process is as follows:

  1. Enter random chars into Username and Password fields
  2. Click Submit
  3. Save or Don't the password
  4. Click Screen Capture

One more note: I have mutter's scale-monitor-framebuffer and autoclose-xwayland experiments enabled, but ATM scaling is 100% and there are apps talking to XWayland.

Can reproduce, Thanks for the testcase.

Assignee: nobody → stransky

Well, yes. We handle persistent popups differently and non-persistent on Wayland and it looks like gecko changes window type on fly which confuses our WPME (Wayland popup management engine :))

Hm, looks like we need to re-map the popup when popup type changes.

Popup permanent state can be changed during popup lifetime and we need to reconfigure it in such case.

Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/ddecf8f394d3 [Wayland] Reconfigure popup window when popup type is changed, r=emilio
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch

I was able to reproduce the issue on Firefox 93.0a1 (2021-09-03) under Ubuntu 20.04 using the testcase provided in Comment 10.

The issue is fixed on Firefox 96.0b4 and Firefox 97.0a1 (2021-12-14) under the same system.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: