Bug 1728952 [Wayland] Reconfigure popup window when popup type is changed, r=emilio

Popup permanent state can be changed during popup lifetime and we need to reconfigure it in such case.

Differential Revision: https://phabricator.services.mozilla.com/D132026